fixed test build